<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, DzwilllpowerAndroidDemo!</string>
    <string name="app_name">DzwilllpowerAndroidDemo</string>
    <string name="btn_listview">listview 全选 </string>
    <string name="btn_listview_paging">listview分页加载</string>
    <string name="btn_listview_onscroll">listview 滚屏</string>
    <string name="btn_listview_onscrolli">listview显示首字母</string>
    <string name="animation01">Android 动画/Ex_Animation01</string>
    <string name="animation02">Android 动画/Ex_Animation02</string>
    <string name="Ex_checkboxActivity">Android 控件的使用/listview和checkbox全选</string>
    <string name="Ex_checkboxActivity01">Android 控件的使用/listview和checkbox全选2</string>
    <string name="Ex_ListViewOncrollListenerI">Android 控件的使用/listview滚动监听</string>
    <string name="Ex_ListViewOnScrollListener">Android 控件的使用/listview滚动监听2</string>
    <string name="Ex_ListViewPagingLoading">Android 控件的使用/lsitview动态加载</string>
    <string name="TestReturnXMl">Android基础测试练习/测试返回的xml值</string>
    <string name="AndroidPraticeActivity">Android基础测试练习/listview 的使用</string>
    <string name="TestHandler">Android Handler/Handler 更新UI</string>
    <string name="TestHandler2">Android Handler/利用handler.post()更新UI</string>
    <string name="testintent">Android基础测试练习/测试隐式的的intent</string>
    <string name="temptest">Android基础测试练习/图片下载和获取屏幕密度</string>
    <string name="asynctaskexample">Android异步任务/AsyncTaskExample</string>
    <string name="handlertest">Android异步任务/Handler post 方法执行顺序</string>
    <string name="listviewsample">Android 控件的使用/listviewsample</string>
    <string name="seekbarsample">Android 控件的使用/seekbarsample</string>
    <string name="reflectionimage">Android 自定义view/图片倒影</string>
    <string name="sharedimagefetcherexample">图片异步加载</string>
    <string name="onfocuschangeexample">Android基础测试练习/焦点切换</string>
    <string name="testdemo">测试demo</string>
    <string name="mergeadapterdemo">mergeadapterdemo</string>
    <string name="multithreadwriteimg">multithreadwriteimg</string>
    <string name="filmviewtest">filmview 使用</string>
    <string name="domparse">dom解析</string>
    <string name="pullparse">pull解析</string>
    <string name="saxparse">sax解析</string>
    <string name="xmlparse">xml解析</string>
    <string name="gaussianblur">高斯模糊效果</string>
    <string name="seekbar">seekbar 测试</string>
    <string name="androidcoordinate">android 坐标系</string>
    <string name="gettranslationx">getTranslationX 验证</string>
    <string name="textviewdefaultpadding">TextView 默认padding测试</string>
    <string name="testall">Activity所有的测试</string>
    <string name="second">第二个activity</string>
    <string name="third">第三个activity</string>

</resources>