<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btnDomParse"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/domparse" />

    <Button
        android:id="@+id/btnPullParse"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnDomParse"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/pullparse" />

    <Button
        android:id="@+id/btnSaxParse"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnPullParse"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/saxparse" />

</RelativeLayout>